--- a/SpringBeanSetFactory/pom.xml
+++ b/SpringBeanSetFactory/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.favtuts.common</groupId>
-  <artifactId>SpringBeanListFactory</artifactId>
+  <artifactId>SpringBeanSetFactory</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>SpringBeanListFactory</name>
+  <name>SpringBeanSetFactory</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -20,6 +20,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring</artifactId>
 			<version>2.5.6</version>
-		</dependency>
+		</dependency>    
   </dependencies>
 </project>
