--- a/SpringAutoScanComponent/pom.xml
+++ b/SpringAutoScanComponent/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.favtuts.common</groupId>
-	<artifactId>SpringAutoWiringAutowired</artifactId>
+	<artifactId>SpringAutoScanComponent</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>SpringAutoWiringAutowired</name>
+	<name>SpringAutoScanComponent</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>3.2.3.RELEASE</spring.version>
-		<maven.compiler.source>11</maven.compiler.source>
-     	<maven.compiler.target>11</maven.compiler.target>
+		<spring.version>4.3.1.RELEASE</spring.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+     	<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
